# 3d-basketball-wssef

./: CMakeLists.txt  README.md  ball.frag  camera.h  cameramain.cpp  court.cpp  court.h  court.vert  main.cpp  physics.cpp  physics.h  pose_receiver.h  pose_sender.py  renderer.cpp  renderer.h  shader.cpp  shader.h  shot_data.csv  trail.vert  vision.cpp  vision.h
shaders/: ball.frag  ball.vert  court.frag  court.vert  trail.vert
